# rust-solid

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/invoices/: connection.rs  contract.rs  contract_database_depository.rs  contract_mock_depository.rs  contract_repository.rs  generate_invoices.rs  invoice.rs  invoice_generation.rs  invoice_generation_strategy.rs  mod.rs  payment.rs  pg_adapter.rs  presenter.rs
src/invoices/tests/: contract.rs  generate_invoices.rs  mod.rs
src/shchemas/: schemas.sql
