[package]
name = "rust-solid"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
num-bigint = "0.4.3"
postgres = { version = "0.19.5", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
rust_decimal = { version = "1.31.0", features = ["db-postgres", "serde-float"] }
serde = "1.0.181"
serde_derive = "1.0.181"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
